--- a/lambda/image/get_image/pom.xml
+++ b/lambda/image/get_image/pom.xml
@@ -4,9 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>image</artifactId>
         <groupId>com.moreDraw</groupId>
+        <artifactId>lambda</artifactId>
         <version>1.0</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <groupId>com.moreDraw</groupId>
