--- a/lambda/image/pom.xml
+++ b/lambda/image/pom.xml
@@ -4,23 +4,20 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <artifactId>lambda</artifactId>
         <groupId>com.moreDraw</groupId>
+        <artifactId>lambda</artifactId>
         <version>1.0</version>
     </parent>
 
+    <groupId>com.moreDraw</groupId>
     <artifactId>image</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>configuration_image</module>
         <module>get_image</module>
+        <module>put_image_picture</module>
         <module>post_image</module>
         <module>put_image</module>
-        <module>put_image_picture</module>
+        <module>delete_image</module>
     </modules>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
-
 </project>
