--- a/lambda/image/configuration_image/pom.xml
+++ b/lambda/image/configuration_image/pom.xml
@@ -36,6 +36,12 @@
             <version>1.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.moreDraw</groupId>
+            <artifactId>configuration_users</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
