--- a/lambda/infra_api_rest.yml
+++ b/lambda/infra_api_rest.yml
@@ -18,29 +18,22 @@ Parameters:
     Type: String
 
 Resources:
-  RestApi:
-    Type: AWS::ApiGateway::RestApi
-    Properties:
-      Name: !Sub "${Stage} - moreDraw - REST"
-      FailOnWarnings: true
-      Body:
-        'Fn::Transform':
-          Name: 'AWS::Include'
-          Parameters:
-            Location: s3://moredraw/deploy/api_rest.json
+#  RestApi:
+#    Type: AWS::ApiGateway::RestApi
+#    Properties:
+#      Name: !Sub "${Stage} - moreDraw - REST"
+#      FailOnWarnings: true
+#      Body:
+#        'Fn::Transform':
+#          Name: 'AWS::Include'
+#          Parameters:
+#            Location: s3://moredraw/deploy/api_rest.json
 
   HttpApi:
     Type: AWS::ApiGatewayV2::Api
     Properties:
-      Body:
-        'Fn::Transform':
-          Name: 'AWS::Include'
-          Parameters:
-            Location: s3://moredraw/deploy/api_http.json
-
-
-
-  #   Funções Lambda
+      ProtocolType: HTTP
+      Name: !Sub "${Stage} - moreDraw - HTTP"
 
   postUserFunction:
     Type: AWS::Serverless::Function
@@ -63,11 +56,6 @@ Resources:
             Path: /users
             Method: POST
             ApiId: !Ref HttpApi
-#          WarmingSchedule:
-#            Type: Schedule
-#            Properties:
-#              Schedule: rate(6 minutes)
-#              Input: '{"headers": {"x-api-key": "your_api_key_here"}}'
       Policies:
         - Version: "2012-10-17"
           Statement:
@@ -82,7 +70,8 @@ Resources:
               Resource:
                 - !Join ["", ["arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user/federalTax"]]
                 - !Join ["", ["arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user"]]
-#                - "arn:aws:sns:*:*:*"
+        - S3ReadPolicy: # Use uma política pré-definida para acessar objetos no bucket S3
+            BucketName: moredraw
 
 
   postUsersLoginFunction:
@@ -185,7 +174,7 @@ Resources:
             Path: /users/verify
             Method: PUT
             ApiId: !Ref HttpApi
-      Role: "arn:aws:iam::170387992571:role/sns-lambda-moreDraw"
+#      Role: "arn:aws:iam::170387992571:role/sns-lambda-moreDraw"
 
   putUsersFunction:
     Type: AWS::Serverless::Function
@@ -329,202 +318,202 @@ Resources:
                 - !Join ["", ["arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user/index/federalTax"]]
                 - !Join ["", ["arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user"]]
 
-  ### image ###
-  getImageFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Architectures:
-        - x86_64
-      SnapStart:
-        ApplyOn: PublishedVersions
-      FunctionName:
-        Fn::Join: [ "", [ !Ref Stage, "-getImage" ] ]
-      Environment:
-        Variables:
-          ENV: !Ref Env
-      CodeUri: image/get_image/target/get_image-1.0.jar
-      Handler: handler.GetImageHandler::handleRequest
-      Events:
-        List:
-          Type: Api
-          Properties:
-            Path: /image/{imageId}
-            Method: GET
-            RestApiId:
-              Ref: RestApi
-      Policies:
-        - Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Action:
-                - "dynamodb:GetItem"
-                - "dynamodb:Scan"
-                - "dynamodb:Query"
-                - "dynamodb:PutItem"
-                - "dynamodb:UpdateItem"
-              Resource:
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
-  postImageFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Architectures:
-        - x86_64
-      SnapStart:
-        ApplyOn: PublishedVersions
-      FunctionName:
-        Fn::Join: [ "", [ !Ref Stage, "-postImage" ] ]
-      Environment:
-        Variables:
-          ENV: !Ref Env
-      CodeUri: image/post_image/target/post_image-1.0.jar
-      Handler: handler.PostImageHandler::handleRequest
-      Events:
-        List:
-          Type: Api
-          Properties:
-            Path: /image
-            Method: POST
-            RestApiId:
-              Ref: RestApi
-      Policies:
-        - Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Action:
-                - "dynamodb:GetItem"
-                - "dynamodb:Scan"
-                - "dynamodb:Query"
-                - "dynamodb:PutItem"
-                - "dynamodb:UpdateItem"
-                - "dynamodb:BatchWriteItem"
-                - "s3:GetObject"
-                - "s3:PutObject"
-                - "s3:DeleteObject"
-              Resource:
-                - "arn:aws:s3:::moredraw"
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
-  putImagePictureFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Architectures:
-        - x86_64
-      SnapStart:
-        ApplyOn: PublishedVersions
-      FunctionName:
-        Fn::Join: [ "", [ !Ref Stage, "-putImagePicture" ] ]
-      Environment:
-        Variables:
-          ENV: !Ref Env
-      CodeUri: image/put_image_picture/target/put_image_picture-1.0.jar
-      Handler: handler.PutImagePictureHandler::handleRequest
-      Events:
-        List:
-          Type: Api
-          Properties:
-            Path: /image/picture/{imageId}
-            Method: PUT
-            RestApiId:
-              Ref: RestApi
-      Policies:
-        - Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Action:
-                - "dynamodb:PutItem"
-                - "dynamodb:GetItem"
-                - "dynamodb:Scan"
-                - "dynamodb:Query"
-                - "dynamodb:UpdateItem"
-                - "s3:GetObject"
-                - "s3:PutObject"
-                - "s3:DeleteObject"
-              Resource:
-                - "arn:aws:s3:::moredraw"
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
-
-  putImageFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Architectures:
-        - x86_64
-      SnapStart:
-        ApplyOn: PublishedVersions
-      FunctionName:
-        Fn::Join: [ "", [ !Ref Stage, "-putImage" ] ]
-      Environment:
-        Variables:
-          ENV: !Ref Env
-      CodeUri: image/put_image/target/put_image-1.0.jar
-      Handler: handler.PutImageHandler::handleRequest
-      Events:
-        List:
-          Type: Api
-          Properties:
-            Path: /image/{imageId}
-            Method: PUT
-            RestApiId:
-              Ref: RestApi
-      Policies:
-        - Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Action:
-                - "dynamodb:GetItem"
-                - "dynamodb:Scan"
-                - "dynamodb:Query"
-                - "dynamodb:PutItem"
-                - "dynamodb:UpdateItem"
-                - "dynamodb:BatchWriteItem"
-              Resource:
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
-
-  deleteImageFunction:
-    Type: AWS::Serverless::Function
-    Properties:
-      Architectures:
-        - x86_64
-      SnapStart:
-        ApplyOn: PublishedVersions
-      FunctionName:
-        Fn::Join: [ "", [ !Ref Stage, "-deleteImage" ] ]
-      Environment:
-        Variables:
-          ENV: !Ref Env
-      CodeUri: image/delete_image/target/delete_image-1.0.jar
-      Handler: handler.DeleteImageHandler::handleRequest
-      Events:
-        List:
-          Type: Api
-          Properties:
-            Path: /image/{imageId}
-            Method: Delete
-            RestApiId:
-              Ref: RestApi
-      Policies:
-        - Version: "2012-10-17"
-          Statement:
-            - Effect: "Allow"
-              Action:
-                - "dynamodb:GetItem"
-                - "dynamodb:Scan"
-                - "dynamodb:DeleteItem"
-                - "dynamodb:Query"
-                - "dynamodb:PutItem"
-                - "dynamodb:UpdateItem"
-                - "dynamodb:BatchWriteItem"
-                - "s3:GetObject"
-                - "s3:PutObject"
-                - "s3:DeleteObject"
-              Resource:
-                - "arn:aws:s3:::moredraw"
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
-                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
-
+#  ### image ###
+#  getImageFunction:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      Architectures:
+#        - x86_64
+#      SnapStart:
+#        ApplyOn: PublishedVersions
+#      FunctionName:
+#        Fn::Join: [ "", [ !Ref Stage, "-getImage" ] ]
+#      Environment:
+#        Variables:
+#          ENV: !Ref Env
+#      CodeUri: image/get_image/target/get_image-1.0.jar
+#      Handler: handler.GetImageHandler::handleRequest
+#      Events:
+#        List:
+#          Type: Api
+#          Properties:
+#            Path: /image/{imageId}
+#            Method: GET
+#            RestApiId:
+#              Ref: RestApi
+#      Policies:
+#        - Version: "2012-10-17"
+#          Statement:
+#            - Effect: "Allow"
+#              Action:
+#                - "dynamodb:GetItem"
+#                - "dynamodb:Scan"
+#                - "dynamodb:Query"
+#                - "dynamodb:PutItem"
+#                - "dynamodb:UpdateItem"
+#              Resource:
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
+#  postImageFunction:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      Architectures:
+#        - x86_64
+#      SnapStart:
+#        ApplyOn: PublishedVersions
+#      FunctionName:
+#        Fn::Join: [ "", [ !Ref Stage, "-postImage" ] ]
+#      Environment:
+#        Variables:
+#          ENV: !Ref Env
+#      CodeUri: image/post_image/target/post_image-1.0.jar
+#      Handler: handler.PostImageHandler::handleRequest
+#      Events:
+#        List:
+#          Type: Api
+#          Properties:
+#            Path: /image
+#            Method: POST
+#            RestApiId:
+#              Ref: RestApi
+#      Policies:
+#        - Version: "2012-10-17"
+#          Statement:
+#            - Effect: "Allow"
+#              Action:
+#                - "dynamodb:GetItem"
+#                - "dynamodb:Scan"
+#                - "dynamodb:Query"
+#                - "dynamodb:PutItem"
+#                - "dynamodb:UpdateItem"
+#                - "dynamodb:BatchWriteItem"
+#                - "s3:GetObject"
+#                - "s3:PutObject"
+#                - "s3:DeleteObject"
+#              Resource:
+#                - "arn:aws:s3:::moredraw"
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
+#  putImagePictureFunction:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      Architectures:
+#        - x86_64
+#      SnapStart:
+#        ApplyOn: PublishedVersions
+#      FunctionName:
+#        Fn::Join: [ "", [ !Ref Stage, "-putImagePicture" ] ]
+#      Environment:
+#        Variables:
+#          ENV: !Ref Env
+#      CodeUri: image/put_image_picture/target/put_image_picture-1.0.jar
+#      Handler: handler.PutImagePictureHandler::handleRequest
+#      Events:
+#        List:
+#          Type: Api
+#          Properties:
+#            Path: /image/picture/{imageId}
+#            Method: PUT
+#            RestApiId:
+#              Ref: RestApi
+#      Policies:
+#        - Version: "2012-10-17"
+#          Statement:
+#            - Effect: "Allow"
+#              Action:
+#                - "dynamodb:PutItem"
+#                - "dynamodb:GetItem"
+#                - "dynamodb:Scan"
+#                - "dynamodb:Query"
+#                - "dynamodb:UpdateItem"
+#                - "s3:GetObject"
+#                - "s3:PutObject"
+#                - "s3:DeleteObject"
+#              Resource:
+#                - "arn:aws:s3:::moredraw"
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
+#
+#  putImageFunction:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      Architectures:
+#        - x86_64
+#      SnapStart:
+#        ApplyOn: PublishedVersions
+#      FunctionName:
+#        Fn::Join: [ "", [ !Ref Stage, "-putImage" ] ]
+#      Environment:
+#        Variables:
+#          ENV: !Ref Env
+#      CodeUri: image/put_image/target/put_image-1.0.jar
+#      Handler: handler.PutImageHandler::handleRequest
+#      Events:
+#        List:
+#          Type: Api
+#          Properties:
+#            Path: /image/{imageId}
+#            Method: PUT
+#            RestApiId:
+#              Ref: RestApi
+#      Policies:
+#        - Version: "2012-10-17"
+#          Statement:
+#            - Effect: "Allow"
+#              Action:
+#                - "dynamodb:GetItem"
+#                - "dynamodb:Scan"
+#                - "dynamodb:Query"
+#                - "dynamodb:PutItem"
+#                - "dynamodb:UpdateItem"
+#                - "dynamodb:BatchWriteItem"
+#              Resource:
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_user" ] ]
+#
+#  deleteImageFunction:
+#    Type: AWS::Serverless::Function
+#    Properties:
+#      Architectures:
+#        - x86_64
+#      SnapStart:
+#        ApplyOn: PublishedVersions
+#      FunctionName:
+#        Fn::Join: [ "", [ !Ref Stage, "-deleteImage" ] ]
+#      Environment:
+#        Variables:
+#          ENV: !Ref Env
+#      CodeUri: image/delete_image/target/delete_image-1.0.jar
+#      Handler: handler.DeleteImageHandler::handleRequest
+#      Events:
+#        List:
+#          Type: Api
+#          Properties:
+#            Path: /image/{imageId}
+#            Method: Delete
+#            RestApiId:
+#              Ref: RestApi
+#      Policies:
+#        - Version: "2012-10-17"
+#          Statement:
+#            - Effect: "Allow"
+#              Action:
+#                - "dynamodb:GetItem"
+#                - "dynamodb:Scan"
+#                - "dynamodb:DeleteItem"
+#                - "dynamodb:Query"
+#                - "dynamodb:PutItem"
+#                - "dynamodb:UpdateItem"
+#                - "dynamodb:BatchWriteItem"
+#                - "s3:GetObject"
+#                - "s3:PutObject"
+#                - "s3:DeleteObject"
+#              Resource:
+#                - "arn:aws:s3:::moredraw"
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image/index/createdBy-created" ] ]
+#                - Fn::Join: [ "", [ "arn:aws:dynamodb:", !Ref Region, ":", !Ref AwsId, ":table/", !Ref Env, "_image" ] ]
+#
